--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@
 
               <!-- Collapse -->
               <div class="accordion-collapse collapse" id="featuresTwo" aria-labelledby="featuresTwoHeading"
-                data-bs-parent="#featuresAccordion" style="">
+                data-bs-parent="#featuresAccordion">
                 <div class="accordion-body">
                   <p class="text-muted">C’est une valeur fondamentale chez VATEC Contractor et nous y veillons tout
                     particulièrement. <br>
@@ -1152,7 +1152,7 @@
 
               <!-- Collapse -->
               <div class="accordion-collapse collapse" id="featuresThree" aria-labelledby="featuresThreeHeading"
-                data-bs-parent="#featuresAccordion" style="">
+                data-bs-parent="#featuresAccordion" >
                 <div class="accordion-body">
                   <p class="text-muted">Nous sommes solidaires en cas de surcharge de travail en nous aidant
                     mutuellement. <br>
@@ -1238,7 +1238,7 @@
           <div class="card card-row shadow-light-lg mb-6">
             <div class="row gx-0">
               <a class="col-12 col-md-6 order-md-2 bg-light card-img-end"
-                style="background-image: url(assets/img/logos/Logo_du_ministère_de_la_défense_nationale.png); min-height: 400px; background-repeat: no-repeat; background-position: center;"
+                style="background-image: url(assets/img/logos/Logo_du_ministère_de_la_défense_nationale.png); min-height: 400px; background-repeat: no-repeat; background-position: center;"
                 href="#!">
 
                 <!-- Image (placeholder) -->
@@ -1300,7 +1300,7 @@
           </div>
 
           <div class="row  pb-6">
-            <div class="col-12 col-md-6 col-lg-4 d-flex">
+            <div class="col-12 col-md-12 col-lg-4 d-flex">
 
               <!-- Card -->
               <div class="card mb-6 mb-lg-0 shadow-light-lg lift lift-lg">
@@ -1346,7 +1346,7 @@
               </div>
 
             </div>
-            <div class="col-12 col-md-6 col-lg-4 d-flex">
+            <div class="col-12 col-md-12 col-lg-4 d-flex">
 
               <!-- Card -->
               <div class="card mb-6 mb-lg-0 shadow-light-lg lift lift-lg">
@@ -1392,7 +1392,7 @@
               </div>
 
             </div>
-            <div class="col-12 col-md-6 col-lg-4 d-flex">
+            <div class="col-12 col-md-12 col-lg-4 d-flex">
 
               <!-- Card -->
               <div class="card mb-6 mb-lg-0 shadow-light-lg lift lift-lg">
